CICO-10995 fixed scrollbar thumb

--- a/admin/css/admin_ng.css.less
+++ b/admin/css/admin_ng.css.less
@@ -1112,6 +1112,29 @@ th > div:is('Active'){
   }
   .content-scroll {
     height: 100%;
+
+    /* emulating native scroll */
+    overflow: hidden;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+    /**/
+    &::-webkit-scrollbar {
+      -webkit-appearance: scrollbarthumb-vertical;
+      width: 5px;
+    }
+    /**/
+    &::-webkit-scrollbar-track {
+      background: transparent none;
+    }
+    /**/
+    &::-webkit-scrollbar-thumb {
+      border-radius: 5px;
+      background-color: #ffb319;
+    }
+    /**/
+    &::-webkit-scrollbar-thumb:hover {
+      background-color: #ffb319;
+    }
   }
 }
 /*---------------------------------*/
